# stylix-preview

./: .gitignore  README.md  flake.nix  pixi.toml  pyproject.toml  todo.md
src/: constants.py  main.py
src/backends/: json.py  palette_backend.py  yaml.py
src/models/: base16.py  color.py  palette.py
src/widgets/: color_button.py  home_grid.py  input_screen.py  palette_grid.py  palette_list.py  palette_view.py  style.tcss
